--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
-    "koa-body-parser": "^0.2.1"
+    "koa-body-parser": "^0.2.1",
+    "koa-static": "^5.0.0"
   }
 }
